[package]
name = "ln-iced"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
localnative_core = { path = "../localnative/localnative-rs/localnative_core" }

[dependencies.iced]
version = "0.3"
default-features = false
[features]
default = ["preview"]
wgpu = [
    "iced/default",
    "iced/tokio",
    "iced/qr_code",
    ]
opengl = [
    "iced/glow",
    "iced/tokio",
    "iced/glow_qr_code",
    "iced/glow_default_system_font"
    ]
preview = [
    "wgpu"
]

[[bin]]
name = "ln"
path = "./src/bin.rs"

[[bin]]
name = "preview-example"
path = "./previews/exam.rs"
required-features = ["preview"]
